--- a/com.unity.renderstreaming/package.json
+++ b/com.unity.renderstreaming/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.unity.renderstreaming",
+  "name": "com.fusedvr.unityrenderstreaming",
   "displayName": "Unity Render Streaming",
   "version": "3.1.0-exp.2",
   "unity": "2019.4",
